--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ input:required {
     margin-top: -60px;
     width: 80px;
     height: 80px;
-    background: #d36c6c ;
+    background: #e56c6e ;
     border-radius: 50%;
     margin-bottom: 15px;
     -moz-transition: all 0.3s ease;
@@ -787,12 +787,12 @@ input:required {
     font-size: 18px;
     font-weight: 500; }
   .services:hover {
-    background: #d36c6c !important; }
+    background: #e56c6e !important; }
     .services:hover .icon {
       background: #fff;
       margin-left: 20px; }
       .services:hover .icon span {
-        color: #d36c6c ; }
+        color: #e56c6e ; }
     .services:hover h3 , .services:hover p {
       color: #fff; }
     .services:hover .media-body {
